--- a/flaskr/templates/poker/game.html
+++ b/flaskr/templates/poker/game.html
@@ -8,5 +8,5 @@
 
 
 {% block script %}
-    <script src="{{ url_for("static", "game.js") }}"></script>
+    <script src="{{ url_for("static", filename="game.js") }}"></script>
 {% endblock %}
