--- a/flaskr/templates/poker/index.html
+++ b/flaskr/templates/poker/index.html
@@ -15,13 +15,17 @@
           <h1>{{ room.name }}</h1>
           <div class="about">by {{ room.author.username }} on {{ room.created.strftime('%Y-%m-%d') }}</div>
         </div>
-        <a class="action" href="{{ url_for('poker.join', room_id=room.id) }}">Join</a>
+        <a class="action" href="javascript:void(0);" onclick="askPassword('{{ room.temp_password}}', '{{room.id}}')" >Join</a>
       </header>
-      <p class="body">Current password: {{ room.temp_password }}</p>
     </article>
     {% if not loop.last %}
       <hr>
     {% endif %}
   {% endfor %}
 {% endblock %}
+
+{% block script %}
+{% endblock %}
+
+
 
