--- a/flaskr/templates/poker/room.html
+++ b/flaskr/templates/poker/room.html
@@ -9,6 +9,7 @@
       <header>
         <div>
           <h1>{{ room.name }}</h1>
+          <h1>Share this code: {{ room.temp_password }}</h1>
           <div class="about">Room leader: {{ room.author.username }}</div>
 
         </div>
@@ -33,7 +34,7 @@
   <script>
     const ROOM_ID = "{{ room.id }}";
     const GAME_URL = "{{ url_for('poker.game', room_id=room.id) }}";
-    joinRoom({{ session_user().id }}, ROOM_ID);
+    joinRoom({{ session_user().id }}, ROOM_ID, '{{ session_user().username }}' );
   </script>
 {% endblock %}
 
