--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,5 +1,6 @@
 html {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
     background: #eee;
     padding: 1rem;
 
@@ -8,6 +9,13 @@ html {
 
     box-sizing: border-box;
 }
+
+/*label, input, button {*/
+/*    !* the following ensures they're all using the same box-model for rendering *!*/
+/*    -moz-box-sizing: content-box; !* or `border-box` *!*/
+/*    -webkit-box-sizing: content-box;*/
+/*    box-sizing: content-box;*/
+/*}*/
 
 body {
     margin: 0 auto;
@@ -30,14 +38,10 @@ body {
 }
 
 h1 {
-    font-family: serif;
     color: #377ba8;
     margin: 1rem 0;
 }
 
-a {
-    color: #377ba8;
-}
 
 hr {
     border: none;
@@ -59,7 +63,7 @@ nav h1 {
     margin: 0;
 }
 
-nav h1 a {
+nav h1 {
     text-decoration: none;
     padding: 0.25rem 0.5rem;
 }
@@ -71,7 +75,7 @@ nav ul {
     padding: 0;
 }
 
-nav ul li a, nav ul li span, header .action {
+nav ul li, nav ul li span, header .action {
     display: block;
     padding: 0.5rem;
 }
@@ -181,7 +185,10 @@ input[type=submit] {
 
 #game-wrapper {
     display: none;
+    flex-direction: column;
+    justify-content: space-around;
 }
+
 
 .main-content {
     flex: 7;
@@ -198,5 +205,70 @@ input[type=submit] {
 
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
+}
+
+#button-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.custom-input {
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #222222;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    color: #222222;
+    text-align:center;
+    transition: all 0.2s;
+
+    -webkit-appearance: none;
+    height: 32px;
+}
+
+.custom-input:hover {
+    color: #222222;
+    background-color: #888888;
+}
+
+#messageform {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+#messageform > input {
+    flex: 7;
+    margin-right: 4px;
+}
+
+#messageform > button {
+    flex: 3;
+}
+
+.user-entry {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    padding: 4px;
+    border-bottom: 1px solid #222222;
+    margin-bottom: 8px;
+}
+
+.user-entry-name {
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.user-list {
+    width: 30%;
 }
