--- a/flaskr/templates/poker/game.html
+++ b/flaskr/templates/poker/game.html
@@ -29,7 +29,7 @@
                 </canvas>
             </div>
             <div id="button-bar">
-                <button class="custom-input custom-button" onclick="call()">Call</button>
+                <button id="call-button" class="custom-input custom-button" onclick="call()">Call</button>
                 <button class="custom-input custom-button" onclick="raise()">Raise</button>
                 <div class="range-slider">
                     <input id="rs-range-line" class="rs-range" type="range" value="0" min="0" max="1">
