--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -43,39 +43,26 @@ hr {
 nav {
     background: lightgray;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding: 0 0.5rem;
+    padding: 0 0 0 0.5rem;
     height: 5%;
     box-sizing: border-box;
-
 }
 
-nav h1 {
-    flex: auto;
-    margin: 0;
-}
 
-nav h1 {
-    text-decoration: none;
-    padding: 0.25rem 0.5rem;
-}
-
-nav ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li, nav ul li span, header .action {
-    display: block;
-}
 
 .content {
     box-sizing: border-box;
 
     width: 100%;
     height: 100%;
+}
+
+.main-content-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .content > header {
@@ -97,6 +84,12 @@ nav ul li, nav ul li span, header .action {
     border: 1px solid #377ba8;
     box-sizing: border-box;
 
+}
+
+.room-wrapper {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
 }
 
 .post > header {
@@ -181,8 +174,8 @@ input[type=submit] {
     padding: 0 0 8px;
     text-align: left;
 
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
 
 #game-wrapper {
@@ -224,6 +217,7 @@ input[type=submit] {
     border-radius: 0.12em;
     box-sizing: border-box;
 
+    background-color: #f6f6f6;
     -webkit-appearance: none;
     height: 32px;
 }
@@ -413,8 +407,8 @@ input[type=submit] {
     border-bottom: 1px solid grey;
     text-align: center;
 
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
 
 .event-log-entry:nth-child(even) {
@@ -449,5 +443,35 @@ input[type=submit] {
 
 .flex-title {
     flex: 1;
+    text-align: center;
+}
+
+.nav-bar {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+
+    justify-content: end;
+    align-items: center;
+}
+
+.nav-bar > * {
+    flex: 1;
+    margin: 0 8px;
+    box-sizing: border-box;
+}
+
+.styled-div-text {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    align-items: center;
+}
+.styled-div-text > * {
+    margin: 0 2px;
+}
+
+.custom-text {
+    font-size: 12px;
     text-align: center;
 }
