--- a/flaskr/templates/poker/index.html
+++ b/flaskr/templates/poker/index.html
@@ -1,27 +1,35 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Rooms{% endblock %}</h1>
-  {% if session_user() %}
-    <a class="action" href="{{ url_for('poker.create') }}">New</a>
-  {% endif %}
+    <h1>{% block title %}Rooms{% endblock %}</h1>
+    {% if session_user() %}
+        <a class="custom-input custom-button" href="{{ url_for('poker.create') }}">New</a>
+    {% endif %}
 {% endblock %}
 
 {% block content %}
-  {% for room in rooms %}
-    <article class="post">
-      <header>
-        <div>
-          <h1>{{ room.name }}</h1>
-          <div class="about">by {{ room.author.username }} on {{ room.created.strftime('%Y-%m-%d') }}</div>
+    <div class="main-content-wrapper">
+        <div class="room-wrapper">
+            {% for room in rooms %}
+                <article class="post">
+                    <header>
+                        <div>
+                            <h1>{{ room.name }}</h1>
+                            <div class="about">by {{ room.author.username }}
+                                on {{ room.created.strftime('%Y-%m-%d') }}</div>
+                        </div>
+                        {% if session_user() %}
+                            <button class="custom-input custom-button"
+                               onclick="askPassword('{{ room.temp_password }}', '{{ room.id }}')">Join</button>
+                        {% endif %}
+                    </header>
+                </article>
+                {% if not loop.last %}
+                    <hr>
+                {% endif %}
+            {% endfor %}
         </div>
-        <a class="action" href="javascript:void(0);" onclick="askPassword('{{ room.temp_password}}', '{{room.id}}')" >Join</a>
-      </header>
-    </article>
-    {% if not loop.last %}
-      <hr>
-    {% endif %}
-  {% endfor %}
+    </div>
 {% endblock %}
 
 {% block script %}
