Many things are fixed You can generally play through one game without a server crash right now

--- a/flaskr/templates/poker/game.html
+++ b/flaskr/templates/poker/game.html
@@ -36,6 +36,7 @@
                     <span id="rs-bullet" class="rs-label">0</span>
                 </div>
                 <button class="custom-input custom-button" onclick="fold()">Fold</button>
+                <div class="custom-input custom-button" onclick="beginRound()">Begin Round</div>
             </div>
         </div>
         <div id="chip-wrapper" class="secondary-content">
